# cpp-template

./: .gitignore  CMakeLists.txt  README.md
include/: foo.hpp
src/: main.cpp
src/cmd/: CMakeLists.txt
src/cmd/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: foo.hpp
src/core/src/: foo.cpp
tests/: test_core.cpp
